<resources>
    <string name="app_name">Spotify Streamer</string>

    <string name="title_activity_top_tracks">Top 10 Tracks</string>>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="action_settings">Settings</string>
    <string name="artist_search_hint">Search artist</string>

    <string name="toast_no_match_found">Please refine your search.</string>
    <string name="toast_no_tracks_found">No tracks were found.</string>
    <string name="toast_error_found">An error has ocurred. Please try again later.</string>
    <string name="toast_no_internet">Please connect to Internet and try again.</string>
    <string name="content_desc_previous_track">Previous track</string>
    <string name="content_desc_play_track">Play track</string>
    <string name="content_desc_next_track">Next track</string>
    <string name="Album_artwork">Album artwork</string>
    <string name="default_start_duration">0:00</string>
    <string name="title_activity_delete">Delete</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_country_code_key">country_code</string>
    <string name="pref_country_code_label">Country code</string>
    <string name="pref_enable_notification_label">Now Playing Notification</string>
    <string name="pref_enable_notification_true">Enabled</string>
    <string name="pref_enable_notification_false">Not enabled</string>
    <string name="pref_enable_notification_key">enable_notifications</string>
    <string name="pref_enable_notification_default">true</string>
    <string name="pref_country_code_default">US</string>


</resources>
