<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ranguro.spotifystreamer.ui.PlayerActivityFragment"
    android:gravity="center">

    <TextView
        android:id="@+id/artist_name"
        android:text="Imagine Dragons"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/album_name"
        android:gravity="center"
        android:text="Night Visions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_weight="1"
        android:id="@+id/album_artwork"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/night_visions_album"
        android:contentDescription="@string/Album_artwork" />

    <TextView
        android:id="@+id/track_name"
        android:text="Demons"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/track_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/start_duration"
            android:text="@string/default_start_duration"
            android:gravity="start"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/end_duration"
            android:text="0:30"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/play_previous_track_btn"
            android:padding="20dp"
            android:layout_marginRight="@dimen/previous_media_margin_right"
            android:layout_marginLeft="@dimen/previous_media_margin_left"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:src="@android:drawable/ic_media_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:tint="@color/content_color"
            android:contentDescription="@string/content_desc_previous_track" />

        <ImageButton
            android:id="@+id/play_track_btn"
            android:padding="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:tint="@color/content_color"
            android:src="@android:drawable/ic_media_pause"
            android:contentDescription="@string/content_desc_play_track" />

        <ImageButton
            android:id="@+id/play_next_track_btn"
            android:padding="20dp"
            android:layout_marginLeft="@dimen/next_media_margin_left"
            android:layout_marginRight="@dimen/next_media_margin_right"
            android:layout_weight="1"
            android:src="@android:drawable/ic_media_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:tint="@color/content_color"
            android:contentDescription="@string/content_desc_next_track"
            android:onClick="playNextTrack"/>
    </LinearLayout>



</LinearLayout>
